trying to fix laggy animation on ios

--- a/assets/styles/layout/setups.scss
+++ b/assets/styles/layout/setups.scss
@@ -14,6 +14,7 @@
 html, body{
   height: 100%;
   margin: 0;
+  transform: translate3d(0)
 }
 body{
   @include segoe;
